--- a/src/xbuild/FertilizerDialog.form
+++ b/src/xbuild/FertilizerDialog.form
@@ -298,7 +298,7 @@
     </Component>
     <Component class="org.jdesktop.swingx.JXLabel" name="jXLabel10">
       <Properties>
-        <Property name="text" type="java.lang.String" value="kg ha-1"/>
+        <Property name="text" type="java.lang.String" value="kg/ha"/>
       </Properties>
     </Component>
     <Component class="org.jdesktop.swingx.JXLabel" name="jXLabel11">
@@ -308,22 +308,22 @@
     </Component>
     <Component class="org.jdesktop.swingx.JXLabel" name="jXLabel12">
       <Properties>
-        <Property name="text" type="java.lang.String" value="kg ha-1"/>
+        <Property name="text" type="java.lang.String" value="kg/ha"/>
       </Properties>
     </Component>
     <Component class="org.jdesktop.swingx.JXLabel" name="jXLabel13">
       <Properties>
-        <Property name="text" type="java.lang.String" value="kg ha-1"/>
+        <Property name="text" type="java.lang.String" value="kg/ha"/>
       </Properties>
     </Component>
     <Component class="org.jdesktop.swingx.JXLabel" name="jXLabel14">
       <Properties>
-        <Property name="text" type="java.lang.String" value="kg ha-1"/>
+        <Property name="text" type="java.lang.String" value="kg/ha"/>
       </Properties>
     </Component>
     <Component class="org.jdesktop.swingx.JXLabel" name="jXLabel15">
       <Properties>
-        <Property name="text" type="java.lang.String" value="kg ha-1"/>
+        <Property name="text" type="java.lang.String" value="kg/ha"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="bnCancel">
