--- a/src/xbuild/FieldFrame.form
+++ b/src/xbuild/FieldFrame.form
@@ -86,7 +86,7 @@
               <Component id="jXPanel1" min="-2" pref="369" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jXPanel2" min="-2" pref="271" max="-2" attributes="0"/>
-              <EmptySpace pref="35" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -763,7 +763,7 @@
                 <Property name="label" type="java.lang.String" value="WTH"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rdWthActionPerformed"/>
+                <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="rdWthItemStateChanged"/>
               </Events>
             </Component>
             <Component class="javax.swing.JRadioButton" name="rdGen">
@@ -774,7 +774,7 @@
                 <Property name="label" type="java.lang.String" value="Gen"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rdWthActionPerformed"/>
+                <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="rdWthItemStateChanged"/>
               </Events>
             </Component>
             <Component class="javax.swing.JRadioButton" name="rdClimate">
@@ -785,7 +785,7 @@
                 <Property name="label" type="java.lang.String" value="Climate"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rdWthActionPerformed"/>
+                <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="rdWthItemStateChanged"/>
               </Events>
             </Component>
           </SubComponents>
