--- a/src/xbuild/GeneralInfoFrame.form
+++ b/src/xbuild/GeneralInfoFrame.form
@@ -338,8 +338,8 @@
         </Component>
         <Component class="xbuild.Components.XSpinner" name="txtYear">
           <Properties>
-            <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
-              <SpinnerModel initial="9999" maximum="9999" minimum="1900" numberType="java.lang.Integer" stepSize="1" type="number"/>
+            <Property name="editor" type="javax.swing.JComponent" editor="org.netbeans.modules.form.editors.SpinnerEditorEditor">
+              <SpinnerEditor format="0" type="3"/>
             </Property>
           </Properties>
           <Events>
